<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.infinity.dev.myappportfolio.PortfolioActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:minHeight="75dp"
            android:text="@string/header"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app1"
            android:background="@color/buttonColor"
            android:onClick="click"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app2"
            android:background="@color/buttonColor"
            android:onClick="click"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app3"
            android:background="@color/buttonColor"
            android:onClick="click"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project4"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app4"
            android:background="@color/buttonColor"
            android:onClick="click"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project5"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app5"
            android:background="@color/buttonColor"
            android:onClick="click"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project6"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:minHeight="60dp"
            android:minWidth="250dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app6"
            android:background="@color/buttonColorPink"
            android:onClick="click"/>
    </LinearLayout>
</ScrollView>